app-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invpy-deployment
  namespace: invpy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invpy
  template:
    metadata:
      labels:
        app: invpy
    spec:
      containers:
        - name: invpy
          image: dahol/invpy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
