app-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invpy-service
  namespace: invpy
spec:
  selector:
    app: invpy
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
