app-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invpy-ingress
  namespace: invpy
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - "invpy.findmyapp.net"
      secretName: invpy-findmyapp-net-staging-new-tls
  rules:
    - host: "invpy.findmyapp.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invpy-service
                port:
                  number: 3000
